--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,31 @@
 {
-    "name": "Example app",
-    "id": "example",
+    "name": "ZWave-JS UI",
+    "id": "zwave-js-ui",
     "packaging_format": 1,
     "description": {
-        "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
-        "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
+        "en": "Full featured Z-Wave Control Panel and MQTT Gateway to Z-Wave devices.",
+        "fr": ""
     },
-    "version": "1.0~ynh1",
-    "url": "https://example.com",
+    "version": "2022.12.26~ynh1",
+    "url": "https://zwave-js.github.io/zwave-js-ui",
     "upstream": {
-        "license": "free",
-        "website": "https://example.com",
-        "demo": "https://demo.example.com",
-        "admindoc": "https://yunohost.org/packaging_apps",
-        "userdoc": "https://yunohost.org/apps",
-        "code": "https://some.forge.com/example/example"
+        "license": "mit",
+        "website": "https://zwave-js.github.io/zwave-js-ui",
+        "admindoc": "https://zwave-js.github.io/zwave-js-ui/#/usage/setup",
+        "userdoc": "https://zwave-js.github.io/zwave-js-ui/#/usage/nodes-management",
+        "code": "https://github.com/zwave-js/zwave-js-ui"
     },
     "license": "free",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com"
+        "name": "chexxor",
+        "email": "chexxor@pm.me"
     },
     "requirements": {
-        "yunohost": ">= 11.0.0"
+        "yunohost": ">= 4.3.0"
     },
-    "multi_instance": true,
+    "multi_instance": false,
     "services": [
-        "nginx",
-        "php7.4-fpm",
-        "mysql"
+        "nginx"
     ],
     "arguments": {
         "install": [
@@ -39,23 +36,13 @@
             {
                 "name": "path",
                 "type": "path",
-                "example": "/example",
-                "default": "/example"
+                "example": "/zwave-dashboard",
+                "default": "/"
             },
             {
                 "name": "is_public",
                 "type": "boolean",
-                "default": true
-            },
-            {
-                "name": "language",
-                "type": "string",
-                "ask": {
-                    "en": "Choose the application language",
-                    "fr": "Choisissez la langue de l'application"
-                },
-                "choices": ["fr", "en"],
-                "default": "fr"
+                "default": false
             },
             {
                 "name": "admin",
@@ -63,11 +50,7 @@
             },
             {
                 "name": "password",
-                "type": "password",
-                "help": {
-                    "en": "Use the help field to add an information for the admin about this question.",
-                    "fr": "Utilisez le champ aide pour ajouter une information à l'intention de l'administrateur à propos de cette question."
-                }
+                "type": "password"
             }
         ]
     }
